--- a/booksapi/config/packages/security.yaml
+++ b/booksapi/config/packages/security.yaml
@@ -42,8 +42,9 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        #- { path: ^/api,       roles: IS_AUTHENTICATED_FULLY } #OPEN FOR TEST
         #- { path: ^/api/books,       roles: IS_AUTHENTICATED_FULLY } #OPEN FOR TEST
         - { path: ^/api/user,       roles: IS_AUTHENTICATED_FULLY }
-        #- { path: ^/api/categories,       roles: IS_AUTHENTICATED_FULLY } #OPEN FOR TEST
+        - { path: ^/api/categories,       roles: IS_AUTHENTICATED_FULLY } #OPEN FOR TEST
 
 
